--- a/case_study_module_5/task1.1.html
+++ b/case_study_module_5/task1.1.html
@@ -51,6 +51,16 @@
         .cacLoaiPhong{
             text-align: center;
         }
+        #fotter-1{
+            background-color: lightseagreen;
+        }
+        .map:hover{
+            color: orangered;
+        }
+        .map{
+            width: 400px;
+            height: 50px;
+        }
 
 
     </style>
@@ -251,6 +261,31 @@
         <p>Khu nghỉ dưỡng có 196 phòng được thiết kế theo phong cách truyền thống Việt Nam kết hợp với phong cách Pháp, 2 tòa nhà 4 tầng có hướng nhìn ra biển, nhìn ra hồ bơi trong xanh và những khu vườn nhiệt đới xanh tươi mát. Ngoài ra, khu nghỉ dưỡng Furama còn cung cấp các liệu pháp spa, phòng xông hơi ướt, phòng xông hơi khô, dịch vụ mát-xa cạnh hồ bơi, các dịch vụ thể thao dưới nước và các lớp tập yoga và Thái Cực Quyền trên bãi biển.</p>
     </div>
     <div class="col-4"></div>
+</div>
+<div class="row" >
+    <div class="col-1" id="fotter-1"></div>
+    <div class="col-3" id="fotter-2">
+        <h2>Hướng Dẫn Di Chuyển</h2>
+        <h3>Khu nghỉ dưỡng Furama là cơ sở hàng đầu để
+            khám phá một trong những điểm đến hấp dẫn
+            nhất Châu Á. Chỉ cách Đà Nẵng một quãng lái xe
+            ngắn là bốn Di sản Văn hóa Thế giới được
+            UNESCO công nhận:</h3>
+        <button class="btn  map" type="button">
+
+            <h5><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+            </svg>Xem trên bản đồ</h5>
+        </button>
+        <h2>Địa Điểm</h2>
+        <ol>
+            <li>Cố đô Huế &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;    2 tiếng</li>
+            <li>Phố cổ Hội An &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;      30 phút</li>
+            <li>Thánh địa Mỹ Sơn&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;90 phút</li>
+            <li>Động Phong Nha&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; 3 tiếng</li>
+        </ol>
+    </div>
+    <div class="col-8" id="fotter-3"></div>
 </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
